apps/learning/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learning
  labels:
    app.kubernetes.io/managed-by: argocd
